[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "npx"
version = "0.1.2"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Some useful extensions for NumPy"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = ["numpy >= 1.20.0", "scipy >= 1.8"]

[project.urls]
Code = "https://github.com/sigma-py/npx"
Issues = "https://github.com/sigma-py/npx/issues"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
select = ["ALL"]
ignore = [
  "ANN", "S101", "D", "T201", "ERA", "N803", "PLR2004"
#   "ANN", "C901", "D", "E741", "ERA", "FBT", "INP001",
#   "N", "PLR", "S101", "T201", "TID252", "TD", "FIX002"
]
target-version = "py38"

[tool.mypy]
ignore_missing_imports = true
