[metadata]
name = npx
version = 0.0.17
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Some useful extensions for NumPy
url = https://github.com/nschloe/npx
project_urls =
    Code=https://github.com/nschloe/npx
    Issues=https://github.com/nschloe/npx/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >= 1.20.0
python_requires = >=3.6

[options.packages.find]
where=src
